--- a/2017/201707/20170709.md
+++ b/2017/201707/20170709.md
@@ -1,5 +1,5 @@
 # What I did / やったこと
-- 何もできず
+- spring batchの調査
 
 # What I want to do / やりたいこと
 - 年間・月間の目標を~~5~~7月中に再検討する
@@ -7,5 +7,8 @@
 - 転職活動の結果、学んだことをblogに書く
 
 # What I thought / 思ったこと
-- 家庭事情及び、疲労により今日は（も）おやすみ。
+- Spring Batchをぱぱっと触ろうとしたら、Eclipse（STS）で作成されるテンプレートがイマイチだったので調査で終了。
+  - スタートテンプレート的なプロジェクトを新規作成しようとするとbootになって、そこからbatchを起動するという形になるみたい。
+  - 一応レガシーテンプレート的なのを使用することで、直接batchのテンプレートは作成できるようだが、不要なファイルやら設定やらが山のように入っていてかなりイマイチ。
+  - Spring Batch公式にQuick Startがあるので、これで試すのが一番近いっぽい？（実業務のプロジェクトもこれに近い気がする。）
 - やりたい事は多数あるが、お仕事落ち着くまで厳しい気が。
