[add] apology message

--- a/2017/201707/20170715.md
+++ b/2017/201707/20170715.md
@@ -1,18 +1,11 @@
 # What I did / やったこと
-
-| No. | 単語 | 意味 |
-|---|---|---|
-| 1 |  |  |
-| 2 |  |  |
-| 3 |  |  |
-| 4 |  |  |
-| 5 |  |  |
-| 6 |  |  |
-| 7 |  |  |
-| 8 |  |  |
-| 9 |  |  |
-| 10 |  |  |
+- 何かしていたと思われるが、日報がテンプレのままpushしていたためわからず。
+  - ローカルにも残っていない。。。
 
 # What I want to do / やりたいこと
+- 年間・月間の目標を~~5~~7月中に再検討する
+- Scala研修資料の完了
+- 転職活動の結果、学んだことをblogに書く
 
 # What I thought / 思ったこと
+- git fookでテンプレと比較することで繰り返さないようにしたい。
