--- a/2017/201707/20170724.md
+++ b/2017/201707/20170724.md
@@ -1,18 +1,14 @@
 # What I did / やったこと
-
-| No. | 単語 | 意味 |
-|---|---|---|
-| 1 |  |  |
-| 2 |  |  |
-| 3 |  |  |
-| 4 |  |  |
-| 5 |  |  |
-| 6 |  |  |
-| 7 |  |  |
-| 8 |  |  |
-| 9 |  |  |
-| 10 |  |  |
+- 友人家のネットワーク相談
+- Spring開発環境の再整備（何度目？
 
 # What I want to do / やりたいこと
+- 年間・月間の目標を~~5~~7月中に再検討する
+- Scala研修資料の完了
+- 転職活動の結果、学んだことをblogに書く
 
 # What I thought / 思ったこと
+- 友人から連絡があり、引っ越し直後のネットワーク設定の相談にのる。
+  - が、結局まだ開通してないんじゃないか説が強力というオチ。
+- Springでもやろう！っと思い立ったものの、再びEclipseでつまづく。
+- もうIDEAでいいやん。
