--- a/2017/201708/20170821.md
+++ b/2017/201708/20170821.md
@@ -1,6 +1,6 @@
 # What I did / やったこと
 - LT資料作成。
-  - とりあえず完成。
+  - [とりあえず完成](http://slideck.io/github.com/yamap55/Slide/20170823/firstGroovy.md)
 
 # What I want to do / やりたいこと
 - 年間・月間の目標を~~57~~8月中に再検討する
