[update] add comment

--- a/2017/201709/20170914.md
+++ b/2017/201709/20170914.md
@@ -10,6 +10,8 @@
 # What I thought / 思ったこと
 - だらだらとやってきた事をやっと公開。嬉しい！
   - 使う人は殆どいないだろうけど、一応他の人も使えるように作ったのはいい心がけだと思う。
+- 23時現在で21もはてブついてるぅぅぅぅ！！！嬉しい。
+  - http://b.hatena.ne.jp/entry/yamap55.hatenablog.com/entry/2017/09/14/123955
 - 自分が使えて楽になるものを作るってこんなに楽しいのかと実感。
 - 以前作って放置してる、とあるゲームのアイテム検索サイトも更新したい！
   - 超どうでもいいけど2年ぶりのアップデートが発表されたの！
