--- a/2017/201711/20171109.md
+++ b/2017/201711/20171109.md
@@ -1,5 +1,6 @@
 # What I did / やったこと
-- 何もしていない？
+- GroovyScriptで書いていたSlack botの移植作業
+  - Slack部分を移植調査
 
 # What I want to do / やりたいこと
 - 年間・月間の目標を再検討する
@@ -7,6 +8,6 @@
 - 転職活動の結果、学んだことをblogに書く
 
 # What I thought / 思ったこと
-- もっとも最悪な、何をしたのかしていないのかわからないという。。。
-- 何かしたと思うのだが、記録に残っておらず。
-- 日報貯めるのはせめて2日としたい所。。。
+- Slack部分を移植しようとした所、色々不具合があってなかなかうまく行かず。
+- また、設定ファイルから値の取得についてもうまくいかない。。。
+- Configファイルについては調べれば出てきそうなのに出てこないから、調べ方が悪いんだろうなぁっと実感中。
