[fixed] diary date to shift day

--- a/2018/201804/20180413.md
+++ b/2018/201804/20180413.md
@@ -1,6 +1,6 @@
 # What I did / やったこと
-- ↓をそのまま作成することをはじめた
-  - [Twitterの名前を5分毎に東京の天気☼☂☃と連動させるサーバレスプログラムを書いたら色々知らないことが出てきた話](https://qiita.com/issei_y/items/ab641746be2704db98be)
+- 家事記録の評価基準を追加
+  - [評価基準を追加](https://github.com/yamap55/raspberrypi-home/issues/30)
 
 # What I want to do / やりたいこと
 - 統計検定3級取得
@@ -9,6 +9,5 @@
   - 初代 → V3
 
 # What I thought / 思ったこと
-- Qiitaで見つけた記事の内容をそのままやってみようと思ってはじめた。
-- 全然時間取れてないので、OpenWeatherMapのAPIを試しただけ。
-- 明日できたらいいな。
+- 1日ズレて日報を書いてしまった。。。
+- 家事記録の基準を追加。これで最初の気持ちからブレずに記録をつけられるはず。
